Added materials to grouped form requests
Added material color event
Added data modules to mirror 1.12.2's oredict module
Changed how module with forms add recipes